Blender 4.1 NLA Combine blend type is Broken #119946

Closed
opened 2024-03-27 02:12:13 +01:00 by Tal Hershkovich · 6 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 398.36

Blender Version
Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: 40a5e739e270
Worked: 4.0.2

Caused by a99e419b6e

Short description of error
Blender combine blend type gets double values when adding a keyframe. I'm not sure if it's coming from the NLA or from the keyframe insert updates, it's only a 4.1 problem, and looks like it should be a high prio

Exact steps for others to reproduce the error
In the attached file there are 2 tracks. The first one already has 2 keyframes on the bones. On the second track the strip is already in edit mode. Add a single keyframe without moving the bone, click on the timeline to evaluate it, and you will see that the bone is jumping further, about twice the distance.
Add the next keyframe on frame 20, the same happens over there.

**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 398.36 **Blender Version** Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: `40a5e739e270` Worked: 4.0.2 Caused by a99e419b6e **Short description of error** Blender combine blend type gets double values when adding a keyframe. I'm not sure if it's coming from the NLA or from the keyframe insert updates, it's only a 4.1 problem, and looks like it should be a high prio **Exact steps for others to reproduce the error** In the attached file there are 2 tracks. The first one already has 2 keyframes on the bones. On the second track the strip is already in edit mode. Add a single keyframe without moving the bone, click on the timeline to evaluate it, and you will see that the bone is jumping further, about twice the distance. Add the next keyframe on frame 20, the same happens over there.
Tal Hershkovich added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2024-03-27 02:12:14 +01:00
Member

Hi, thanks for the report. Can confirm.

Hi, thanks for the report. Can confirm.
Member

Caused by a99e419b6e
This won't happen if you select "location" or something else in keying set.
cc @ChrisLend

Caused by a99e419b6e841d673a3542c372d5faec82c0d138 This won't happen if you select "location" or something else in keying set. cc @ChrisLend
Philipp Oeser added this to the 4.1 milestone 2024-03-27 09:59:58 +01:00
Christoph Lendenfeld self-assigned this 2024-03-28 09:17:50 +01:00

thanks, will take a look today

thanks, will take a look today

so this is only an issue with bones, objects are ok.
The issue seems to be that we pass the PointerRNA of the bone to the NLA stack decomposition which doesn't work. It needs to get the pointer to the armature object

so this is only an issue with bones, objects are ok. The issue seems to be that we pass the `PointerRNA` of the bone to the NLA stack decomposition which doesn't work. It needs to get the pointer to the armature object
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-28 15:14:15 +01:00

Thanks for the quick fix. Is there away to test the fix or is it still a wip? because when I try the last 4.1 rc from Blender build, then it's still there

Thanks for the quick fix. Is there away to test the fix or is it still a wip? because when I try the last 4.1 rc from Blender build, then it's still there
Member

@TalHershkovich hi, try 4.2 build

Fix is not backported to 4.1 branch yet.

@TalHershkovich hi, try 4.2 build Fix is not backported to 4.1 branch yet.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119946
No description provided.